# croma

./: .build.yml  .travis.yml  AUTHORS  HACKING  NEWS  README  README.md  autogen.sh  configure.ac  croma.pot  git.mk  index.html  makepot  marco.pot  meson.build  meson_options.txt  meson_post_install.py
.tx/: config
2022-04-08-135635-17468-1@6e49c7a4f997_Wmissing-field-initializers/: index.html  report-01aca0.html  report-0243d9.html  report-05a4a3.html  report-0797b8.html  report-0b15c4.html  report-0fc411.html  report-10c6dd.html  report-16e73e.html  report-1d97e8.html  report-1f1535.html  report-2049d5.html  report-21a655.html  report-2236ac.html  report-228add.html  report-23f982.html  report-25d976.html  report-2871e3.html  report-296563.html  report-2a5ebb.html  report-2b044e.html  report-2d6af1.html  report-2e931e.html  report-35e007.html  report-3974d8.html  report-3a26c2.html  report-3fb955.html  report-45caa2.html  report-4c1ac4.html  report-4e1c02.html  report-55524f.html  report-599332.html  report-5d6fec.html  report-5eea6d.html  report-6177fa.html  report-619972.html  report-679f27.html  report-686014.html  report-68d594.html  report-6ec2d0.html  (+36 more)
2022-04-08-140323-2695-cppcheck@6e49c7a4f997_Wmissing-field-initializers/: 16.html  18.html  20.html  21.html  4.html  commitmsg  output_6e49c7a4f9971427e5e6352a7a9a8acfb52873f0
2022-04-08-141324-17463-1@6e49c7a4f997_Wmissing-field-initializers/: index.html  output_6e49c7a4f9971427e5e6352a7a9a8acfb52873f0  report-09420d.html  report-0a64af.html  report-0c4b62.html  report-0c7688.html  report-0d1fd7.html  report-0e709f.html  report-11cca6.html  report-14320e.html  report-1538e0.html  report-192a4f.html  report-1a8669.html  report-1aa209.html  report-1c690b.html  report-1dfd56.html  report-20ec9c.html  report-262feb.html  report-2a9431.html  report-2bb94b.html  report-2cd496.html  report-2d3973.html  report-36a198.html  report-37ff6c.html  report-3846d8.html  report-3bf0b6.html  report-3ed4d0.html  report-433b9c.html  report-44286d.html  report-46b224.html  report-4a9de6.html  report-4b6435.html  report-4d3152.html  report-4e1e96.html  report-52f7bd.html  report-5b6981.html  report-60e2ab.html  report-676fc5.html  report-680a29.html  report-681b62.html  (+37 more)
2022-04-08-141823-0334-cppcheck@6e49c7a4f997_Wmissing-field-initializers/: 3.html  9.html  index.html
2022-04-08-143438-17408-1@ee0235398cdb_Wmissing-field-initializers/: index.html  report-08326b.html  report-0ccd56.html  report-0e6b60.html  report-0fe597.html  report-135921.html  report-14946c.html  report-1725d3.html  report-17694f.html  report-1dcb71.html  report-1e2454.html  report-211ebf.html  report-22de09.html  report-285487.html  report-2a1471.html  report-2f610a.html  report-30929a.html  report-3c04ad.html  report-3dfa85.html  report-40e648.html  report-410129.html  report-446b4f.html  report-47e804.html  report-4acadc.html  report-4af992.html  report-512b28.html  report-5514a1.html  report-5a078c.html  report-68c059.html  report-6a7cdc.html  report-7065f9.html  report-72211a.html  report-744db9.html  (+43 more)
src/: 50-croma-desktop-key.xml.in  50-croma-global-key.xml.in  50-croma-window-key.xml.in  50-marco-desktop-key.xml.in  50-marco-global-key.xml.in  50-marco-window-key.xml.in  Makefile.am  croma-wm.desktop.in  croma.desktop.in  libcroma-private.pc.in  libmarco-private.pc.in  marco-wm.desktop.in  marco.desktop.in  meson.build  org.cafe.croma.gschema.xml  org.mate.croma.gschema.xml  org.mate.marco.gschema.xml
src/compositor/: compositor-xrender.c
src/core/: async-getprop.c  atomnames.h  bell.c  bell.h  boxes.c  constraints.c  constraints.h  core.c  croma-Xatomtype.h  delete.c  display-private.h  display.c  effects.c  errors.c  eventqueue.c  eventqueue.h  frame-private.h  frame.c  group-private.h  group.c  group.h  iconcache.c  iconcache.h  keybindings.c  main.c  place.c  place.h  prefs.c  schema-bindings.c  screen-private.h  screen.c  session.c  stack.c  testasyncgetprop.c  testboxes.c  util.c  window-private.h  window-props.c  window.c  workspace.c  (+1 more)
src/include/: all-keybindings.h  common.h  core.h  errors.h  main.h  prefs.h  resizepopup.h  tabpopup.h  ui.h  util.h  xprops.h
src/themes/: Makefile.am  meson.build
src/themes/Atlanta/: metacity-theme-1.xml
src/themes/Atlanta_ctk/: meson.build  metacity-theme-1.xml
src/themes/ClearlooksRe/: metacity-theme-1.xml
src/themes/ClearlooksRe_ctk/: meson.build  metacity-theme-1.xml
src/themes/Dopple-Left_ctk/: meson.build  metacity-theme-1.xml
src/themes/Dopple_ctk/: meson.build  metacity-theme-1.xml
src/themes/DustBlue/: metacity-theme-1.xml
src/themes/DustBlue_ctk/: meson.build
src/themes/Esco/: metacity-theme-1.xml
src/themes/Esco_ctk/: meson.build  metacity-theme-1.xml
src/themes/Gorilla_ctk/: meson.build  metacity-theme-1.xml
src/themes/Motif/: metacity-theme-1.xml
src/themes/Motif_ctk/: meson.build  metacity-theme-1.xml
src/themes/Raleigh/: metacity-theme-1.xml
src/themes/Raleigh_ctk/: meson.build  metacity-theme-1.xml
src/themes/Spidey/: metacity-theme-1.xml
src/themes/Spidey-Left/: metacity-theme-1.xml
src/themes/Spidey-Left_ctk/: meson.build  metacity-theme-1.xml
src/themes/Spidey_ctk/: meson.build  metacity-theme-1.xml
src/themes/Splint/: metacity-theme-1.xml
src/themes/Splint-Left_ctk/: meson.build  metacity-theme-1.xml
src/themes/Splint_ctk/: meson.build  metacity-theme-1.xml
src/themes/WinMe/: metacity-theme-1.xml
src/themes/WinMe_ctk/: meson.build  metacity-theme-1.xml
src/themes/eOS_ctk/: meson.build  metacity-theme-1.xml  metacity-theme-3.xml
src/tools/: Makefile.am  croma-message.c  croma-window-demo.c  marco-message.c  marco-window-demo.c  meson.build
src/ui/: draw-workspace.c  draw-workspace.h  fixedtip.c  fixedtip.h  frames.c  frames.h  gradient.c  gradient.h  menu.c  menu.h  metaaccellabel.c  metaaccellabel.h  preview-widget.c  preview-widget.h  resizepopup.c  tabpopup.c  testgradient.c  theme-parser.c  theme-parser.h  theme-viewer.c  theme.c  theme.h  tile-preview.c  ui.c
src/wm-tester/: Makefile.am  main.c  meson.build  test-gravity.c
(+1529 files in other folders)
