subdir('Atlanta_ctk')
subdir('ClearlooksRe_ctk')
subdir('Dopple_ctk')
subdir('Dopple-Left_ctk')
subdir('DustBlue_ctk')
subdir('Esco_ctk')
subdir('eOS_ctk')
subdir('Gorilla_ctk')
subdir('Motif_ctk')
subdir('Raleigh_ctk')
subdir('Spidey_ctk')
subdir('Spidey-Left_ctk')
subdir('Splint_ctk')
subdir('Splint_ctk-Left_ctk')
subdir('WinMe_ctk')
